# fast-api-crash-course

./: alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 8094139fbdc0_.py
api/: course.py  courses.py  sections.py  user.py  users.py
api/utils/: course.py  users.py
db/: db_setup.py
db/models/: user.py
pydantic_schemas/: course.py  user.py
